[package]
name = "adot"
version = "0.1.0"
edition = "2021"

[dependencies]
firestore = "0.44.1" 
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.30", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.13.2", features = ["v4"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
